feat: add manual-trigger and batch-processor workflows (Tasks 3.4-3.5)
Manual Trigger Workflow:

- On-demand ticket processing with manual trigger

- Support for 4 operations: reprocess, regenerate, escalate, close

- Force path override for testing different routing logic

- Skip cache option for fresh results

- Full ticket and conversation history retrieval

- Knowledge base re-search with updated parameters

- Comprehensive summary reporting

Batch Processor Workflow:

- Webhook-triggered batch operations

- Regenerate embeddings in batches of 50 (50% API cost savings)

- Update success rates from training examples (90-day window)

- Archive old entries (12+ months without use)

- Export/import knowledge entries

- Batch operation reporting with Slack notifications

- Metrics logging for all operations

Relevant Files Updates:

- Updated task file with new workflow details

- Added database schema files to relevant files

- Added 6 initial knowledge entries

- Added GitHub Actions and backup scripts

Tasks 3.4 and 3.5 completed.

--- a/nsw-strata-automation/docker-compose.queue.yml
+++ b/nsw-strata-automation/docker-compose.queue.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 # Production-style Queue Mode Configuration
 # This extends docker-compose.yml with queue mode enabled
 # Usage: docker-compose -f docker-compose.yml -f docker-compose.queue.yml up -d
@@ -49,6 +47,9 @@ services:
 
       # Logging
       - N8N_LOG_LEVEL=info
+
+      # Skip migrations (main instance handles this)
+      - N8N_SKIP_MIGRATIONS=true
     volumes:
       - n8n_data:/home/node/.n8n
       - ./workflows:/home/node/.n8n/workflows
@@ -88,6 +89,9 @@ services:
 
       # Logging
       - N8N_LOG_LEVEL=info
+
+      # Skip migrations (main instance handles this)
+      - N8N_SKIP_MIGRATIONS=true
     volumes:
       - n8n_data:/home/node/.n8n
       - ./workflows:/home/node/.n8n/workflows
