feat: deploy to development environment with test Freshdesk (Task 15.2)
Implemented complete development environment deployment infrastructure:

- Created deploy-to-dev.sh with automated deployment and validation

- Added docs/development-environment-setup.md with comprehensive setup guide

- Added docs/freshdesk-integration-guide.md with webhook and API integration

- Updated .env.development with external service placeholders

Deployment script features:

- Prerequisites validation (Docker, jq, curl)

- Environment variable loading and validation

- Workflow JSON validation

- Automated backup creation

- Freshdesk API connectivity testing

- Supabase connectivity testing

- Smoke tests for all services

- Comprehensive deployment reporting

Documentation includes:

- Freshdesk test account setup

- n8n development instance configuration

- Supabase project initialization

- Webhook configuration (ticket created/updated)

- API integration and authentication

- Testing procedures and validation

- Troubleshooting guide

- Monitoring setup

Ready for development environment deployment with external service integration.

Related to Task 15.2 in PRD

--- a/nsw-strata-automation/.env.development
+++ b/nsw-strata-automation/.env.development
@@ -70,3 +70,29 @@ N8N_SECURE_COOKIE=false
 # Performance (lower limits for dev)
 EXECUTIONS_TIMEOUT=300
 EXECUTIONS_TIMEOUT_MAX=600
+
+# External Service Configuration (Task 15.2)
+# These should be configured when deploying to dev environment
+
+# Freshdesk Test Instance
+FRESHDESK_DOMAIN=yourcompany-dev
+FRESHDESK_API_KEY=your_freshdesk_api_key_here
+FRESHDESK_WEBHOOK_SECRET=generate_random_secret_here
+
+# Supabase Development Database
+SUPABASE_URL=https://your-project-id.supabase.co
+SUPABASE_ANON_KEY=your_supabase_anon_key_here
+SUPABASE_SERVICE_KEY=your_supabase_service_key_here
+
+# AI API Keys (Development/Test Keys)
+CLAUDE_API_KEY=sk-ant-api03-your_key_here
+OPENAI_API_KEY=sk-your_openai_key_here
+PERPLEXITY_API_KEY=pplx-your_perplexity_key_here
+
+# Slack Notifications (Optional)
+SLACK_WEBHOOK_URL=https://hooks.slack.com/services/YOUR/WEBHOOK/URL
+
+# API Configuration
+CLAUDE_API_URL=https://api.anthropic.com
+OPENAI_API_URL=https://api.openai.com
+PERPLEXITY_API_URL=https://api.perplexity.ai
